# signal-bot

./: .env-example  .gitignore  db_uploader.py  main.py  pyproject.toml
src/: config.py  handlers.py  logger.py  signal_cli_api.py
src/agent/: agent.py  agent_20.py  planner.py
src/agent/tools/: __init__.py  date.py  simple.py  summary_last_x_msgs.py  web_search.py
src/handlers/: ai_call.py  command.py
src/handlers/predef/: sticker_report.py
src/models/: azure_openai.py  db.py  signal.py
tests/: test_agent.py  test_azure_openai_config.py  test_duckduckgo_retrieter.py  test_message_serialization.py  test_messages.py  test_plan_executor.py  test_planner.py  test_simple_request.py  test_tool_last_msgs.py  test_tool_openweathermap.py
tests/example_msgs/: quote_message.json  quote_self_message.json  received_direct_message.json  received_group_message.json  received_message.json  self_message.json  sent_message.json  sticker_message.json
