[project]
name = "signalbot-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrian Qboszek"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langgraph (>=0.2.70,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
